<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<resources>
    <string name="app_name">Java Play</string>
    <string name="sign_in_explanation">Sign with Google to upload your achievements and share with friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign Out</string>
    <string name="click_me">Click me!</string>
    <string name="you_won">OK! You won!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="pick_a_game">Pick a game</string>

    <string name="game_description_stub">Game_Description</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Games -->
    <string name="games_waiting_for_players">Waiting for players to join</string>
    <string name="games_waiting_for_other_player_turn">Waiting for other players to play</string>
    <string name="games_you_win">You WIN !</string>
    <string name="games_you_lose">You lose&#8230;</string>
    <string name="games_play_your_turn">Play your turn</string>
    <string name="rematch_question">Do you want a rematch?</string>
    <string name="rematch_yes">Sure, rematch!</string>
    <string name="rematch_no">No.</string>
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="inbox_not_available">Please sign in to view inbox</string>

    <!-- Yaniv -->
    <string name="yaniv_game_id">Yaniv</string>
    <string name="yaniv_players_cards_count">Card Count :</string>
    <string name="yaniv_description">Play Yaniv card game</string>
    <string name="deck_view_description">Draw New Card</string>
    <string name="discard">Discard</string>
    <string name="score">Score :</string>
    <string name="declare_yaniv_text">Yaniv !</string>
    <string name="yaniv_leaderboard_id">CgkIyuG_9qMQEAIQCA</string>
    <string name="achievement_first_yaniv_win">CgkIyuG_9qMQEAIQCQ</string>

    <!-- Tic Tac Toe -->
    <string name="tictactoe_game_id">Tic Tac Toe</string>
    <string name="tictactoe_leaderboard_id">CgkIyuG_9qMQEAIQDA</string>
    <string name="tictactoe_description">ReplaceMe</string>
    <string name="tictactoe_empty_cell"></string>
    <string name="achievement_first_tic_tac_toe_win">CgkIyuG_9qMQEAIQCg</string>
    <string name="achievement_first_tic_tac_toe_tie">CgkIyuG_9qMQEAIQCw</string>
    <string name="achievement_3_tic_tac_toe_wins">CgkIyuG_9qMQEAIQDQ</string>

    <!-- Google Play API status code errors -->
    <string name="status_multiplayer_error_no_internet_no_cache">The device was unable to retrieve any data from the network and has no data cached locally</string>
    <string name="status_multiplayer_error_no_internet_stale_data">if the device was unable to retrieve the latest data from the network, but has some data cached locally</string>
    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="status_license_failed">License check failed.</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="status_client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="status_internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name="match_error_locally_modified">This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>
    <string name="network_status">NETWORK STATUS</string>
    <string name="network_status_solution">JavaPlay requires an active network connection.\nPlease check your network connection.</string>
    <string name="match_over">MATCH OVER</string>
    <string name="rematch">Start rematch</string>
    <string name="loaded_match">MATCH</string>

    <!-- REST -->
    <string name="audit_url">http://104.196.210.3:8080/JavaPlay/rest/login/audit</string>
    <string name="date_format">yyyy-MM-dd\'T\'HH:mm:ss.SSSZ</string>

    <string name="nav_inbox">Inbox</string>
    <string name="nav_new_match">New Match</string>
    <string name="nav_leader_boards">Leader Boards</string>
    <string name="nav_achievements">Achievements</string>
    <string name="nav_about">About</string>
    <string name="drawer_sign_out">Sign out</string>
    <string name="possibility_game_name">Game Name</string>
    <string name="nav_header_my_user_name">My User Name</string>
    <string name="nav_header_example_email">user@host.com</string>
    <string name="match_result_win">WIN</string>
    <string name="match_result_tie">TIE</string>
    <string name="match_result_loss">LOSS</string>
    <string name="match_result_unknown">UNKNOWN</string>
    <string name="games_you_tie">You tied</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developers_information"><![CDATA[Developers: Idan Levi & Maya Gilad]]></string>

</resources>