<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.levigilad.javaplay.yaniv.YanivPlayFragment"
    android:id="@+id/fragment_yaniv_game">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_instructions"
            tools:text="@string/games_waiting_for_players"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="109dp">

            <ImageView
                android:src="@drawable/playingcard_card_back_red"
                android:id="@+id/iv_deck"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:layout_width="70dp"
                android:contentDescription="@string/deck_view_description" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="12dp"
                android:layout_height="match_parent"></LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ll_discarded"
                android:orientation="horizontal">

            </LinearLayout>

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.32">
                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TableLayout
                            android:id="@+id/tbll_players_card_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TableLayout>
                    </LinearLayout>
                </HorizontalScrollView>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:text="@string/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_score"
                    android:textAlignment="center" />

                <Button
                    android:text="@string/discard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_discard"
                    android:elevation="0dp"
                    android:textSize="12sp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="0.73"></LinearLayout>

                <Button
                    android:text="@string/declare_yaniv_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_Yaniv" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_width="12dp"></LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.95"
                android:id="@+id/ll_hand"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
